TASpring change log

0.next
- added transparency suport from texture2 in s3o drawing
- added DualScreenMode configuration flag. 
    This causes the game view width to be one half of the screen width, so the minimap can take the other half. 
    You will need to spread your spring window across the 2 screens.
- geothermal vents with a geothermal unit on top will not create smoke.

0.73b1

- added support for teamcolored nanospray (user option). Can be forced off by modder using gamedata/particles.tdf.
- new fbi tag shownanoframe: set to 0 to disable nanoframe while the unit is being built.
- new fbi tag shownanospray: set to 0 to disable nanospray.
- new fbi tag nanocolor: color of the nanospray and the nanoframe in red green blue format (white = 1 1 1).
  (These three fbi tags apply to the unit itself; not to the unit it's building.)

- linux vs linux is now synced, independently of the distribution & gcc version
- if host finishes loading before client executable is started spring no longer loses connection

- added the "say" action  (does work with the .give command)

- changed .clock and .info to local commands (/clock and /info now work as well)

- replaced key binding code with a more flexible solution:
  * can specify key for almost all commands (including unit builds)
  * can specify modifiers (Alt, Ctrl, Meta, Shift)
  * can bind the same key to more then one action
    (first available action is used, handy for build orders)

- added internal default bindings  (see rts/Game/UI/KeyBindings.cpp)
- added "unbindall"                command
- added "unbindKeyset    <keyset>" command
- added "unbindAction    <action>" command
- added "unbind <keyset> <action>" command

- added "hotbind"   action for the control panel icons  (Ctrl+insert)
- added "hotunbind" action for the control panel icons  (Ctrl+delete)

- added /keysave and /keyload commands
  (keysave saves to "uikeys.tmp", not "uikeys.txt")
- added /keyprint, /keydebug, /keysyms, and /keycodes commands